<resources>
    <string name="app_name">Calidata</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registrar</string>
    <string name="prompt_password_confirm">Confirma Contraseña</string>
    <string name="prompt_name">Nombre</string>

    <string name="checkbook_active_title">Activar Chequera</string>
    <string name="checkbook_title">Mis Chequeras</string>
    <string name="main_title">Acciones</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="register_title">Registro</string>
    <string name="openDrwawer">open</string>
    <string name="search">Buscar</string>
    <string name="filter_title">Filtros</string>
    <string name="cancel">Cancelar</string>
    <string name="option_title">Selecciona una opción para emitir cheque</string>
    <string name="emit_title">Emitir Cheque</string>
    <string name="emit_label">Emitir</string>
    <string name="quantity">Cantidad</string>
    <string name="comment">Comentarios</string>
    <string name="see_options_label">Ver Opciones</string>
    <string name="hide_options_label">Ocultar Opciones</string>
    <string name="active_checkbook_label">Selecciona una opción para agregar chequera</string>
    <string name="insert_data">Insertar Datos</string>
    <string name="cancel_check_title">Cancelar Cheque</string>
    <string name="cancel_label">Cancelar</string>
    <string name="cancel_title">Esta seguro de cancelar el cheque</string>
    <string name="yes_label">Si</string>
    <string name="no_label">No</string>
    <string name="empty_checkbook">Aún no cuentas con chequeras registradas</string>
    <string name="empty_checks_label">No se encuentran cheques dispobibles</string>
    <string name="empty_checks_active">No se encuentran cheques con estatus ACTIVO</string>
    <string name="empty_checks_empty_cancel">No se tienen cheques para cancelar</string>
    <string name="start_date_label">Fechas</string>
    <string name="end_date_label">Fecha Final</string>
    <string name="query_check_title">Consultar Cheque</string>
    <string name="options_label">Opciones</string>
    <string name="help_label">Ayuda</string>
    <string name="singout_label">Salir</string>
    <string name="username_label">Nombre de Usuario</string>
    <string name="emit_delete_label">Esta seguro de emitir el cheque:</string>
    <string name="success_login">Bienvenido</string>
    <string name="change_password_label">Cambiar Password</string>
    <string name="report_label">Reportar Problema</string>
    <string name="change_username_label">Cambiar Nombre de Usuario</string>
    <string name="save">Guardar</string>
    <string name="select_bank_label">Selecciona un Banco</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Formato de email invalido</string>
    <string name="invalid_password">Password debe tener 6 o más caracteres</string>
    <string name="required_field_label">Campo Obligatorio</string>
    <string name="match_password_title">La contraseña debe de coincidir</string>
    <string name="start_session">Inicia sesion nuevamente</string>
    <string name="success_emit_check">fue emitido exitosamente</string>
    <string name="success_cancel_checkbook">fue cancelada correctamente</string>
    <string name="error_incorrect_start_date">La fecha inicial debe ser menor a la fecha final</string>
    <string name="error_incorrect_end_date">La fecha final debe ser mayor a la fecha inicial</string>
    <string name="error_empty_username">En necesario escribir un nombre de usuario</string>
    <string name="terms">Terminos y Condiciones</string>
    <string name="privacy_label">Privacidad</string>
    <string name="contact_label">Contáctanos</string>
    <string name="profile_label">Perfíl</string>
    <string name="status_label">Estatus:</string>
    <string name="dates_label">Rango de Fechas</string>
    <string name="count_label">Cantidad:</string>
    <string name="apply_btn_label">Aplicar</string>
    <string name="query_check_label">Consultar Cheque</string>
    <string name="free_check_label">Libera Cheque</string>
    <string name="cancel_check_label">Cancelar Cheque</string>
    <string name="current_password_label">Contraseña Actual</string>
    <string name="new_password_label">Nueva Contraseña</string>
    <string name="date_label">Fecha:</string>
    <string name="check_label">Cheque</string>
    <string name="description_label">Descripcion:</string>
    <string name="name_label">Nombre:</string>
    <string name="bene_label">Beneficiario:</string>
    <string name="success_change_password">Cambio Exitoso de Contraseña</string>
    <string name="forgot_password"><u>Olvidé mi contraseña</u>.</string>
    <string name="send_email">Enviar</string>
    <string name="error_empty_email">Es necesario ingresar un email</string>
    <string name="sent_email">Se envió un correo a:</string>
    <string name="hint_phone">Teléfono</string>
    <string name="invalid_phone">Teléfono no valido</string>
    <string name="checkbook_delete_label">Desea eliminar la chequera</string>
    <string name="read_qr_label">Leer QR</string>
    <string name="search_list">Buscar en Lista</string>
    <string name="option_cancel_check_label">Selecciona la opción para cancelar cheque</string>
    <string name="error_not_available_emit_check">El CheckId no es valido para liberarlo</string>
    <string name="error_not_available_cancel_check">El Cheque no está disponible para cancelación</string>
    <string name="error_location_message">Permisos Denegados: Es necesario aceptar permisos para usar la aplicación</string>
    <string name="error_emit_check_previously">El cheque ya fue liberado</string>


    <!-- ERRORS -->

</resources>
