<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <group android:id="@+id/activities" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_query"
            android:icon="@drawable/ic_round_spellcheck_24px"
            android:title="@string/query_check_title" />
        <item
            android:id="@+id/nav_emit"
            android:icon="@drawable/ic_send_check"
            android:title="@string/emit_title" />
        <item
            android:id="@+id/nav_cancel"
            android:icon="@drawable/ic_clipboard_cancel"
            android:title="@string/cancel_check_title" />
    </group>
-->

    <group android:id="@+id/userItems" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_24px"
            android:title="@string/profile_title" />

    </group>

    <group android:id="@+id/appItems" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_label" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail_24px"
            android:title="@string/contact_label" />
    </group>

    <item
        android:id="@+id/nav_close"
        android:icon="@drawable/ic_close_app_24px"
        android:title="@string/singout_label" />
</menu>