<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_background"
    android:windowSoftInputMode="stateHidden"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <EditText
                android:id="@+id/editText_name"
                style="@style/EditTextGnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <EditText
                style="@style/EditTextGnr"
                android:id="@+id/editText_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/editText_name"
                app:layout_constraintStart_toStartOf="@+id/editText_name"
                app:layout_constraintTop_toBottomOf="@+id/editText_name" />

            <EditText
                android:id="@+id/edittext_phone"
                style="@style/EditTextGnr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/hint_phone"
                app:layout_constraintEnd_toEndOf="@+id/editText_email"
                app:layout_constraintStart_toStartOf="@+id/editText_email"
                app:layout_constraintTop_toBottomOf="@+id/editText_email" />

            <EditText
                android:id="@+id/editText_password"
                style="@style/EditTextGnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/edittext_phone"
                app:layout_constraintStart_toStartOf="@+id/edittext_phone"
                app:layout_constraintTop_toBottomOf="@+id/edittext_phone" />

            <EditText
                style="@style/EditTextGnr"
                android:id="@+id/editText_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/prompt_password_confirm"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/editText_password"
                app:layout_constraintStart_toStartOf="@+id/editText_password"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/editText_password_confirm"
                app:layout_constraintStart_toStartOf="@+id/editText_password_confirm"
                app:layout_constraintTop_toBottomOf="@+id/editText_password_confirm" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_round_shape_btn"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>