<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    android:minHeight="200dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_label"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/separator1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_santander_logo" />

        <TextView
            android:id="@+id/textView_label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status_label"
            app:layout_constraintStart_toStartOf="@+id/textView_label_date"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_date" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_folio"
            app:layout_constraintStart_toStartOf="@+id/textView_folio"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/textView_folio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="123456789"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_label_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_label_date"
            app:layout_constraintTop_toTopOf="@+id/textView_label_date" />

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_label_status"
            app:layout_constraintStart_toEndOf="@+id/textView_label_status"
            app:layout_constraintTop_toTopOf="@+id/textView_label_status" />

        <TextView
            android:id="@+id/textView_label_mount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/count_label"
            app:layout_constraintStart_toStartOf="@+id/textView_label_status"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_status" />

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView_label_mount"
            app:layout_constraintStart_toEndOf="@+id/textView_label_mount"
            app:layout_constraintTop_toTopOf="@+id/textView_label_mount" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Banco"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/textView_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackgroundSantander"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView_label_ben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bene_label"
            app:layout_constraintStart_toStartOf="@+id/textView_label_mount"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_mount" />

        <TextView
            android:id="@+id/textView_ben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_label_ben"
            app:layout_constraintStart_toEndOf="@+id/textView_label_ben"
            app:layout_constraintTop_toTopOf="@+id/textView_label_ben" />

        <TextView
            android:id="@+id/textView_label_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="@+id/textView_label_ben"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_ben" />

        <TextView
            android:id="@+id/textView_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_label_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_label_com"
            app:layout_constraintTop_toTopOf="@+id/textView_label_com" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>