<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/degrade_backgrounf"
    tools:context=".login.LoginActivity"
    android:windowSoftInputMode="stateHidden"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:progressTint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <EditText
                android:id="@+id/username"
                style="@style/EditTextGnr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <EditText
                android:id="@+id/password"
                style="@style/EditTextGnr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="@+id/username"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_round_shape_btn"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_round_shape_white_btn"
                android:text="@string/register"
                android:textColor="#9575CD"
                app:layout_constraintBottom_toBottomOf="@+id/login"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="@+id/login" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_flower" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>